--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -47,12 +48,14 @@ javac.classpath=\
     ${file.reference.jdom-2.0.5.jar}:\
     ${file.reference.jsoup-1.7.3.jar}:\
     ${file.reference.mysql-connector-java-5.1.25-bin.jar}:\
-    ${file.reference.servlet-api-2.4.jar}
+    ${file.reference.servlet-api-2.4.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
