Adicionado Leitura config.ini, modificado conexão BD, alteração tolerância falha conexão BD(JanelaConfiguração)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=SuperMercado
+application.title=Tandera Retaguarda
 application.vendor=MARCOANTONIO
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -24,13 +24,14 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/SuperMercado.jar
+dist.jar=${dist.dir}/Tandera_Retaguarda.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-collections-3.2.1.jar=lib/Jasper Report/commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=lib/Jasper Report/commons-digester-2.1.jar
 file.reference.commons-logging-1.1.jar=lib/Jasper Report/commons-logging-1.1.jar
+file.reference.ini4j-0.5.2-SNAPSHOT.jar=lib/ini4j-0.5.2-SNAPSHOT.jar
 file.reference.jasperreports-5.5.1.jar=lib/Jasper Report/jasperreports-5.5.1.jar
 file.reference.jdom-2.0.5.jar=lib/jdom-2.0.5.jar
 file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.jsoup-1.7.3.jar}:\
     ${file.reference.mysql-connector-java-5.1.25-bin.jar}:\
     ${file.reference.servlet-api-2.4.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.ini4j-0.5.2-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
