--- a/Config.ini
+++ b/Config.ini
@@ -5,3 +5,6 @@ porta = 3306
 user = root
 senha = marco
 
+[RELATORIOS]
+caminho = C:\Users\MARCOANTONIO\Documents\NetBeansProjects\Tandera-Retaguarda\src\relatorios
+
