--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,11 @@ file.reference.commons-logging-1.1.jar=lib/Jasper Report/commons-logging-1.1.jar
 file.reference.ini4j-0.5.2-SNAPSHOT.jar=lib/ini4j-0.5.2-SNAPSHOT.jar
 file.reference.jasperreports-5.5.1.jar=lib/Jasper Report/jasperreports-5.5.1.jar
 file.reference.jdom-2.0.5.jar=lib/jdom-2.0.5.jar
+file.reference.jgoodies-common-1.8.0.jar=lib/jgoodies-common-1.8.0.jar
+file.reference.jgoodies-looks-2.6.0-javadoc.jar=lib/jgoodies-looks-2.6.0-javadoc.jar
+file.reference.jgoodies-looks-2.6.0-sources.jar=lib/jgoodies-looks-2.6.0-sources.jar
+file.reference.jgoodies-looks-2.6.0-tests.jar=lib/jgoodies-looks-2.6.0-tests.jar
+file.reference.jgoodies-looks-2.6.0.jar=lib/jgoodies-looks-2.6.0.jar
 file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
 file.reference.mysql-connector-java-5.1.25-bin.jar=lib/mysql-connector-java-5.1.25-bin.jar
 file.reference.servlet-api-2.4.jar=lib/Jasper Report/servlet-api-2.4.jar
@@ -51,7 +56,12 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.25-bin.jar}:\
     ${file.reference.servlet-api-2.4.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.ini4j-0.5.2-SNAPSHOT.jar}
+    ${file.reference.ini4j-0.5.2-SNAPSHOT.jar}:\
+    ${file.reference.jgoodies-looks-2.6.0.jar}:\
+    ${file.reference.jgoodies-looks-2.6.0-javadoc.jar}:\
+    ${file.reference.jgoodies-looks-2.6.0-sources.jar}:\
+    ${file.reference.jgoodies-looks-2.6.0-tests.jar}:\
+    ${file.reference.jgoodies-common-1.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
