--- a/Config.ini
+++ b/Config.ini
@@ -6,5 +6,5 @@ user = root
 senha = marco
 
 [RELATORIOS]
-caminho = C:\Users\MARCOANTONIO\Documents\NetBeansProjects\Tandera-Retaguarda\src\relatorios
+caminho = C:\Users\MARCOANTONIO\Documents\NetBeansProjects\Tandera-Retaguarda\relatorios
 
