Criptografia senha bd .ini, veririficações campos prenchidos, retorno do cliente se já cadastrado.

--- a/Config.ini
+++ b/Config.ini
@@ -3,7 +3,7 @@ nome_banco = supermercado
 host = localhost
 porta = 3306
 user = root
-senha = marco
+senha = rYg1q6D9Jjc=
 
 [RELATORIOS]
 caminho = C:\Users\MARCOANTONIO\Documents\NetBeansProjects\Tandera-Retaguarda\relatorios
